messages dark mode ui fix

--- a/styles/modules/Messages.module.scss
+++ b/styles/modules/Messages.module.scss
@@ -12,7 +12,7 @@
     width: 25rem;
     flex-direction: column;
     color: variables.$text_color;
-    background-color: variables.$secondary_color;
+    background-color: variables.$background_color;
     overflow-y: auto;
 }
 
@@ -39,7 +39,7 @@
 }
   
 .sidebar::-webkit-scrollbar-thumb {
-    background-color: variables.$secondary_color;
+    background-color: variables.$background_color;
     border-radius: 100px;
 }
 
@@ -65,7 +65,7 @@
     input {
         @include mixins.fontClass();
         width: 17rem;
-        background-color: variables.$secondary_color;
+        background-color: variables.$background_color;
         border: none;
         outline: none;
     }
@@ -77,7 +77,7 @@
     flex-direction: column;
     height: calc(100% - 100px);
     width: calc(100% - 25rem - 2px);
-    background-color: variables.$secondary_color;
+    background-color: variables.$background_color;
     margin-left: 25rem;
     border-left: solid;
     border-color: variables.$accent_color;
@@ -99,7 +99,7 @@
     padding: 1rem 0rem;
     box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.25));
     height: 7vh;
-    background-color: variables.$secondary_color;
+    background-color: variables.$background_color;
 }
 
 .messageBar {
@@ -111,11 +111,12 @@
     border-color: variables.$accent_color;
     border-width: 1px;
     margin-top: auto;
-    background-color: variables.$secondary_color;
+    background-color: variables.$background_color;
     width: calc(100% - 4rem);
     height: 3vh;
 
     input {
+        background-color: variables.$background_color;
         border-radius: 100px;
         width: 75%;
         margin-left: 2rem;
